{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 107,
  "lineage": "72b31424-36bb-ee96-822c-7fff648434c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:internet-gateway/igw-0b9d33fd5aec0ff9c",
            "id": "igw-0b9d33fd5aec0ff9c",
            "owner_id": "866143014755",
            "tags": {
              "Name": "nginx-main-gw"
            },
            "tags_all": {
              "Name": "nginx-main-gw"
            },
            "vpc_id": "vpc-08a9cbdb17d84aca7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "nginx_network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:network-acl/acl-09a7c472bc1548de5",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09a7c472bc1548de5",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "866143014755",
            "subnet_ids": [
              "subnet-037dfab52f22f6a89",
              "subnet-07d02915346e5d4b1"
            ],
            "tags": {
              "Deployment": "nginx",
              "Name": "nginx"
            },
            "tags_all": {
              "Deployment": "nginx",
              "Name": "nginx"
            },
            "vpc_id": "vpc-08a9cbdb17d84aca7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:route-table/rtb-0e81c533dccd7ff0c",
            "id": "rtb-0e81c533dccd7ff0c",
            "owner_id": "866143014755",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9d33fd5aec0ff9c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a9cbdb17d84aca7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e45b0d3f2bfd4b3c",
            "route_table_id": "rtb-0e81c533dccd7ff0c",
            "subnet_id": "subnet-037dfab52f22f6a89"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:subnet/subnet-07d02915346e5d4b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d02915346e5d4b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866143014755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx-private-subnet",
              "Owner": "emin"
            },
            "tags_all": {
              "Name": "nginx-private-subnet",
              "Owner": "emin"
            },
            "vpc_id": "vpc-08a9cbdb17d84aca7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:subnet/subnet-037dfab52f22f6a89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037dfab52f22f6a89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866143014755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nginx-public-subnet",
              "Owner": "emin"
            },
            "tags_all": {
              "Name": "nginx-public-subnet",
              "Owner": "emin"
            },
            "vpc_id": "vpc-08a9cbdb17d84aca7"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:vpc/vpc-08a9cbdb17d84aca7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076d28d53783bd618",
            "default_route_table_id": "rtb-02a1fbee7334f96af",
            "default_security_group_id": "sg-0ef1686d864ee0cf4",
            "dhcp_options_id": "dopt-7c86bf1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a9cbdb17d84aca7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a1fbee7334f96af",
            "owner_id": "866143014755",
            "tags": {
              "Name": "emin-vpc",
              "Owner": "emin"
            },
            "tags_all": {
              "Name": "emin-vpc",
              "Owner": "emin"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.windows[0]",
      "mode": "managed",
      "type": "aws_elb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:866143014755:loadbalancer/nginx-alb",
            "availability_zones": [
              "ap-northeast-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-alb-1051647874.ap-northeast-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTPS:443/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "nginx-alb",
            "idle_timeout": 60,
            "instances": [
              "i-01e5784d742c1a9c6"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 443,
                "instance_protocol": "https",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:ap-northeast-1:866143014755:certificate/b981b998-4a1d-4a5d-b4a0-b0bf0f795c6d"
              }
            ],
            "name": "nginx-alb",
            "security_groups": [
              "sg-0e0758b6411191839"
            ],
            "source_security_group": "866143014755/terraform-20250110115621732400000001",
            "source_security_group_id": "sg-0e0758b6411191839",
            "subnets": [
              "subnet-037dfab52f22f6a89"
            ],
            "tags": {
              "Name": "nginx.default.dev.emin-test.com"
            },
            "tags_all": {
              "Name": "nginx.default.dev.emin-test.com"
            },
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_iam_instance_profile.nginx_access_profile",
            "aws_iam_role.nginx_access_role",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main_vpc",
            "data.aws_iam_policy_document.ec2_assume_role",
            "module.windows.aws_instance.ec2",
            "module.windows.aws_security_group.nginx",
            "module.windows.data.template_file.windows_user_data"
          ]
        }
      ]
    },
    {
      "module": "module.windows[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0033bee6df7f8d4f2",
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:instance/i-01e5784d742c1a9c6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx.default.dev.emin-test.com",
            "id": "i-01e5784d742c1a9c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02809f1a427f46c95",
            "private_dns": "ip-10-0-200-217.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.200.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-02879218707cba619",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d02915346e5d4b1",
            "tags": {
              "Name": "nginx-windows-ec2",
              "platform": "windows",
              "propagate_at_launch": "true"
            },
            "tags_all": {
              "Name": "nginx-windows-ec2",
              "platform": "windows",
              "propagate_at_launch": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0758b6411191839"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_access_profile",
            "aws_iam_role.nginx_access_role",
            "aws_subnet.private_subnet",
            "aws_vpc.main_vpc",
            "data.aws_iam_policy_document.ec2_assume_role",
            "module.windows.aws_security_group.nginx",
            "module.windows.data.template_file.windows_user_data"
          ]
        }
      ]
    },
    {
      "module": "module.windows[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:security-group/sg-0e0758b6411191839",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0758b6411191839",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250110115621732400000001",
            "name_prefix": "terraform-",
            "owner_id": "866143014755",
            "revoke_rules_on_delete": false,
            "tags": {
              "Deployment": "nginx",
              "Name": "nginx.default.dev.emin-test.com"
            },
            "tags_all": {
              "Deployment": "nginx",
              "Name": "nginx.default.dev.emin-test.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a9cbdb17d84aca7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.windows[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:subnet/subnet-09e16548ea2827f4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e16548ea2827f4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "866143014755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "nginx",
              "Name": "nginx-subnet-0"
            },
            "tags_all": {
              "Deployment": "nginx",
              "Name": "nginx-subnet-0"
            },
            "vpc_id": "vpc-08a9cbdb17d84aca7"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.windows.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:subnet/subnet-0c6c9a25576208773",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6c9a25576208773",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866143014755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "nginx",
              "Name": "nginx-subnet-1"
            },
            "tags_all": {
              "Deployment": "nginx",
              "Name": "nginx-subnet-1"
            },
            "vpc_id": "vpc-08a9cbdb17d84aca7"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.windows.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:866143014755:subnet/subnet-0d1237e89f6954d93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1237e89f6954d93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "866143014755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Deployment": "nginx",
              "Name": "nginx-subnet-2"
            },
            "tags_all": {
              "Deployment": "nginx",
              "Name": "nginx-subnet-2"
            },
            "vpc_id": "vpc-08a9cbdb17d84aca7"
          },
          "dependencies": [
            "aws_vpc.main_vpc",
            "module.windows.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}